--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ nav {
   padding: 15px 5px;
 }
 
-a {
+.home,
+.contact {
   background-color: var(--on-primary);
   padding: 20px 20px;
   border: none;
@@ -55,7 +56,8 @@ a {
   letter-spacing: 3px;
 }
 
-a:hover {
+.home:hover,
+.contact:hover {
   color: var(--on-background);
   border-bottom: 3px solid;
 }
@@ -164,4 +166,17 @@ input:checked + .slider:before {
   color: var(--on-background);
   margin-left: 17px;
   font-size: 35px;
+}
+
+.icons-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fa-brands {
+  color: var(--primary-color);
+  background-color: var(--background);
+  margin-left: 25px;
+  font-size: 120px;
 }
